# GHOSTc-OS

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build-ghost-system.sh  build.sh
config/: kernel.config  pizero_kernel.config  terminal.conf
scripts/: build-ghostos.sh  build-kernel.sh  build-lfs-ghost.sh  build-lfs-pizero.sh  build-lfs.sh  build-test-kernel.sh  build-tflite.sh  build-tools.sh  create-pizero-image.sh  create-sd-image.sh  dev-commands.sh  download-firmware.sh  finalize-ghost.sh  ghost-setup-safe.sh  install-ghost.sh  make-ghost-work.sh  prepare-sd-auto.sh  prepare-sd-fat.sh  prepare-sd.sh  setup-dev-env.sh  setup-dev-environment.sh  test-ghost-env.sh
scripts/config/: ghost-config.hpp
src/: main.cpp
src/ghost/: ghostc.h
src/ghost/include/: code_analyzer.hpp  dev_assistant.hpp  display.hpp  display_manager.hpp  ghost.hpp  ghost_core.hpp  ghost_flipper.h  ghost_terminal.hpp  kernel_dev.hpp  memory.hpp  network_monitor.hpp  neural_network.hpp  os_builder.hpp  personality.hpp  project_manager.hpp  security_manager.hpp  tor_manager.hpp  wifi_core.hpp
src/ghost/include/ghostc/: compiler.hpp  core.hpp  ghost.h  language.hpp  runtime.hpp  syntax.ghost
src/ghost/include/neural/: network_analyzer.hpp
src/ghost/include/wifi/: wifi_manager.hpp
src/ghost/src/: dev_assistant.cpp  display_manager.cpp  ghost_cli.cpp  ghostc-core.c
src/ghost/src/ghostc/: Makefile  compiler.cpp  compiler_impl.cpp  core.cpp  core_impl.cpp  ghostc-core.c  ghostc-init  ghostc-stealth  language.cpp  runtime.cpp  runtime_impl.cpp
src/ghost/tools/: Makefile  ghostc-monitor.c  ghostc-neural.c
